Kubernetes/nginx/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service

spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30020
